--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <HEAder>
+            <div class="row">
+                    <div class="col-12 my-3 d-flex justify-content-between gap-5">
+                        <h1>Gioco Simon</h1>
+                        <button type="button" class="btn btn-success" id="play">Play</button>
+                    </div>
+                </div>
+        </HEAder>
+        <main>
+            <div class="col-12 my-5">
+                <h3 class="fw-bold ">Timer</h3>
+            </div>
+            <div class="row justify-content-center" id="gioco"></div>
+        </main>
+    </div>
 
 
     <script src="js/function.js"></script>
