--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                 </div>
         </HEAder>
         <main>
-            <div class="col-12 my-5">
-                <h3 class="fw-bold ">Timer</h3>
+            <div class="col-12 my-5 d-flex">
+                <h3 class="fw-bold text-success mx-2 ">Timer:</h3>
+                <h3 class="fw-bold text-danger" id="timerOutput"> </h3>
             </div>
             <div class="row justify-content-center" id="gioco"></div>
         </main>
