schermata dopo i 5s e nuovo tasto

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                 <h3 class="fw-bold text-danger" id="timerOutput"> </h3>
             </div>
             <div class="row justify-content-center" id="gioco"></div>
+            <div class="row ">
+                <div class="col justify-content-center text-center d-flex gap-5" id="risposte"></div>
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-center mt-5" id="tastoconferma"></div>
+            </div>
         </main>
     </div>
 
@@ -32,3 +38,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
