--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <HEAder>
             <div class="row">
-                    <div class="col-12 my-3 d-flex justify-content-between gap-5">
-                        <h1>Gioco Simon</h1>
+                    <div class="col-12 d-flex justify-content-between my-3">
+                        <h1 class="text-warning fw-bold">Gioco Simon</h1>
                         <button type="button" class="btn btn-success" id="play">Play</button>
                     </div>
                 </div>
         </HEAder>
         <main>
-            <div class="col-12 my-5 d-flex">
-                <h3 class="fw-bold text-success mx-2 ">Timer:</h3>
+            <div class="col-12 d-flex justify-content-center">
+                <h3 class="fw-bold text-success mx-2 mb-3 ">Timer:</h3>
                 <h3 class="fw-bold text-danger" id="timerOutput"> </h3>
             </div>
-            <div class="row justify-content-center" id="gioco"></div>
+            <div class="row justify-content-center gap-3" id="gioco"></div>
             <div class="row ">
-                <div class="col justify-content-center text-center d-flex gap-5" id="risposte"></div>
+                <div class="col justify-content-center text-center d-flex gap-2 flex-column" id="risposte"></div>
             </div>
             <div class="row">
                 <div class="col d-flex justify-content-center mt-5" id="tastoconferma"></div>
