--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <HEAder>
             <div class="row">
-                    <div class="col-12 d-flex justify-content-between my-3">
+                    <div class="col-12  d-flex justify-content-between my-3">
                         <h1 class="text-warning fw-bold">Gioco Simon</h1>
                         <button type="button" class="btn btn-success" id="play">Play</button>
                     </div>
@@ -25,7 +25,7 @@
             </div>
             <div class="row justify-content-center gap-3" id="gioco"></div>
             <div class="row ">
-                <div class="col justify-content-center text-center d-flex gap-2 flex-column" id="risposte"></div>
+                <div class="col justify-content-center text-center d-flex gap-2    flex-column flex-lg-row" id="risposte"></div>
             </div>
             <div class="row">
                 <div class="col d-flex justify-content-center mt-5" id="tastoconferma"></div>
