--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
         <HEAder>
             <div class="row">
                     <div class="col-12  d-flex justify-content-between my-3">
-                        <h1 class="text-warning fw-bold">Gioco Simon</h1>
+                        <h1>
+                            <a href="" class="text-warning fw-bold">Gioco Simon</a>
+                        </h1>
                         <button type="button" class="btn btn-success" id="play">Play</button>
                     </div>
                 </div>
         </HEAder>
         <main>
+            <div class="col-12 col-lg-6 offset-lg-3 mt-3">
+                <p id="istruzioni">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur autem consectetur empore voluptate dolorum unde inventore asperiores soluta officiis enim quisquam ad nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus illum soluta vero quidem error libero fugiat similique eum, corrupti omnis voluptatum rerum tempore nostrum dolores molestias tenetur perferendis reprehenderit enim. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis eius, error nostrum magni quidem molestias iusto cupiditate debitis eveniet. Cumque, ratione nobis accusantium sapiente consequuntur deserunt dolores adipisci commodi sequi?</p>
+            </div>
             <div class="col-12 d-flex justify-content-center">
-                <h3 class="fw-bold text-success mx-2 mb-3 ">Timer:</h3>
+                <h3 class="fw-bold mx-2 mb-3 d-none" id="timer-span">Timer:</h3>
                 <h3 class="fw-bold text-danger" id="timerOutput"> </h3>
             </div>
             <div class="row justify-content-center gap-3" id="gioco"></div>
