--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <HEAder>
             <div class="row">
-                    <div class="col-12  d-flex justify-content-between my-3">
+                    <div class="col-12  d-flex justify-content-between align-items-center my-3" id="header-logo">
                         <h1>
                             <a href="" class="text-warning fw-bold">Gioco Simon</a>
                         </h1>
